--- a/resume.tex
+++ b/resume.tex
@@ -1,4 +1,5 @@
 % !TEX program = xelatex
+
 \documentclass{resume}
 
 \begin{document}
@@ -8,44 +9,67 @@
 
 \basicInfo{
   \email{visysl@outlook.com} \textperiodcentered\ 
-  \phone{(+86) 155-571-80427} \textperiodcentered\ 
+  \phone{(+86) 155-571-80427} \textperiodcentered}
 
 \section{\faGraduationCap\ Education}
 \datedsubsection{\textbf{Zhejiang University}, HangZhou, China}{2017 -- 2020}
-\textit{Master student} in Computer Science & Technology (CS)
+\textit{Master student} in College of Computer Science and Technology (CS)
 \datedsubsection{\textbf{Centrol South University}, Changsha, China}{2013 -- 2017}
 \textit{B.S.} in School of Aeronautic and Astronautics (AA)
 
 \section{\faUsers\ Experience}
-\datedsubsection{\textbf{Netease (Hangzhou) Inc.} HangZhou, China}{2020.4 -- Present}
-\role{Game Developer}
+\datedsubsection{\textbf{Netease (Hangzhou) Corp.} HangZhou, China}{2020.4 -- Present}
+\role{Game Client Developer}{}
 \begin{itemize}
   \item UI development, including program and animation
-  \item Shader effects\%
+  \item Shader Effects
   \item Developing and maintaining of toolchains related to game development
 \end{itemize}
 
-\section{\faUsers\ Projects}
-\begin{itemize}
-  \item My Vulkan Video Tutorial on Bilibili (xxx)
-  \item My OpenGL based renderer (https://github.com/cad420/VisualMan)
-  \item My VM-series librars for general use of C++ programming(https://github.com/cad420/VMCore)
-  \item My undergraduate project for large volume data rendering(https://github.com/cad420/VolumeVisualizationGL)
-\end{itemize}
-
-
 \section{\faCogs\ Skills}
 \begin{itemize}[parsep=0.5ex]
-  \item Programming Languages: C++, Python, Rust, C#, CUDA etc.
-  \item Known the concept of rendering and game development
-  \item Essential Qt GUI (QtWidget) framework experience (https://github.com/yslib/EMExplorer)
-  \item A basic experience on Unity3D game engine
+  \item Programming Languages: C/C++, Python, Rust, C\#, CUDA etc
+  \item Know the concept of computer graphics and rendering
+  \item Essential Qt GUI (QtWidget) framework experience {\url{https://github.com/yslib/EMExplore}}
+  \item Basic experience on Unity3D game engine
+  \item Know the concept of operating system
 \end{itemize}
+
+\section{\faUsers\ Projects}
+\textbf{Vulkan Video Tutorial}
+
+   My Vulkan Video Tutorial
+\begin{itemize}
+  \item \url{https://bilibili.com/xxx}
+\end{itemize}
+
+\textbf{Large Volume Data Renderer}
+
+  My undergraduate project for large volume data rendering 
+
+\begin{itemize}
+  \item \url{https://github.com/cad420/VolumeVisualizationGL}
+\end{itemize}
+
+\textbf{VM-serial library}
+
+ A personal use library for basic C++ development
+
+\begin{itemize}
+  \item \url{https://github.com/cad420/VMCore}
+  \item \url{https://github.com/cad420/VMat}
+  \item \url{https://github.com/cad420/VMUtils}
+\end{itemize}
+
+\textbf{VisualMan}
+
+  An OpenGL based renderer(Abandoned) (\url{https://github.com/cad420/VisualMan})
+
 
 \section{\faInfo\ Miscellaneous}
 \begin{itemize}[parsep=0.5ex]
-  \item Blog: http://visysl.com
-  \item GitHub: https://github.com/yslib
+  \item Technical Blog: \url{http://visysl.com}
+  \item GitHub: \url{https://github.com/yslib}
 \end{itemize}
 
 \end{document}
