--- a/resume.tex
+++ b/resume.tex
@@ -14,7 +14,7 @@
 \section{\faGraduationCap\ Education}
 \datedsubsection{\textbf{Zhejiang University}, HangZhou, China}{2017 -- 2020}
 \textit{Master student} in College of Computer Science and Technology (CS)
-\datedsubsection{\textbf{Centrol South University}, Changsha, China}{2013 -- 2017}
+\datedsubsection{\textbf{Centrol South University}, ChangSha, China}{2013 -- 2017}
 \textit{B.S.} in School of Aeronautic and Astronautics (AA)
 
 \section{\faUsers\ Experience}
@@ -55,6 +55,7 @@
 
  A personal use library for basic C++ development
 
+
 \begin{itemize}
   \item \url{https://github.com/cad420/VMCore}
   \item \url{https://github.com/cad420/VMat}
@@ -64,7 +65,6 @@
 \textbf{VisualMan}
 
   An OpenGL based renderer(Abandoned) (\url{https://github.com/cad420/VisualMan})
-
 
 \section{\faInfo\ Miscellaneous}
 \begin{itemize}[parsep=0.5ex]
