--- a/resume zh-ch.tex
+++ b/resume zh-ch.tex
@@ -11,7 +11,7 @@
   \email{visysl@outlook.com} \textperiodcentered\
   \phone{(+86) 155-571-80427} \textperiodcentered}
 
-\section{\faGraduationCap\ Education}
+\section{\faGraduationCap\ 教育经历}
 \datedsubsection{\textbf{浙江大学}}{2017 -- 2020}
 \textit{硕士} 计算机科学与技术学院
 \datedsubsection{\textbf{中南大学}}{2013 -- 2017}
@@ -34,10 +34,10 @@
 
 \section{\faCogs\ 工作技能}
 \begin{itemize}[parsep=0.5ex]
-  \item 编程语言: C/C++, Python, Rust, C\#, CUDA etc.
+  \item 编程语言: C/C++，Rust，Python，C\#，CUDA etc.
   \item 熟悉计算机图形学和渲染相关的知识
   \item Qt框架
-  \item 基本的操作系统相关的知识
+  \item 操作系统相关的知识
 \end{itemize}
 
 \section{\faUsers\ 项目}
@@ -55,7 +55,7 @@
 
 \begin{itemize}
   \item
-  \subsection{硕士论文项目，通过结合视频压缩和GPU驱动的办法, 可以交互的帧率绘制TB级的体术据}
+  \subsection{硕士论文项目，通过结合视频压缩和GPU驱动的办法, 可以交互的帧率绘制TB级的体术据。}
 \end{itemize}
 
 
@@ -79,10 +79,10 @@
 
 \begin{itemize}
 
-\item \textbf{Xiangyang He, Shuoliu Yang, Yubo Tao, Haoran Dai, Hai Lin. Graph Convolutional Network-based Semi-supervised Feature Classification of Volumes. Journal of Visualization, 2021}
-\item \textbf{Xiangyang He, Yubo Tao, Shuoliu Yang, Chuanchang Chen, Hai Lin. ScalarGCN: Scalar-value Association Analysis of Volumes based on Graph Convolutional Network. Journal of Visualization, 2021}
+\item \textbf{Xiangyang He, Shuoliu Yang, Yubo Tao, Haoran Dai, Hai Lin. Graph Convolutional Network-based Semi-supervised Feature Classification of Volumes. Journal of Visualization, 2021}
+\item \textbf{Xiangyang He, Yubo Tao, Shuoliu Yang, Chuanchang Chen, Hai Lin. ScalarGCN: Scalar-value Association Analysis of Volumes based on Graph Convolutional Network. Journal of Visualization, 2021}
 
-\begin{itemize}
+\end{itemize}
 
 \section{\faInfo\ 其他}
 \begin{itemize}[parsep=0.5ex]
